<resources>
    <string name="app_name">alfaMessanger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_phone">Номер телефона</string>
    <string name="auth">Авторизация</string>
    <string name="enter_in_app">Вход в приложение</string>
    <string name="lets_go">Далее</string>
    <string name="not_correct_phone">Введеный номер телефона не корректный</string>
    <string name="confirm_SMS_code">Подтвердите код из СМС</string>
    <string name="code">Введите код</string>
    <string name="all_chats">Все чаты</string>
    <string name="my_chats">Мои чаты</string>
    <string name="account">Аккаунт</string>
    <string name="news">Новости</string>
    <string name="name_label">Name</string>
    <string name="default_status">В сети</string>
    <string name="general_settings">Основные настройки</string>
    <string name="default_number">89601324455</string>
    <string name="change_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="name_change">Имя пользователя</string>
    <string name="bio_label">О себе</string>
    <string name="bio_change">Напишите немного о себе</string>
    <string name="other_settings">Дополнительные настройки</string>
    <string name="settings_theme">Темная тема</string>
    <string name="language_label">Русский язык</string>
    <string name="language_change">Нажмите, чтобы изменить язык приложения</string>
    <string name="online_default_status">В сети</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_login">Введите логин</string>
    <string name="first_mark">\@</string>
    <string name="bio_change_user">Введите инфрмацию о себе</string>
    <string name="confirm_change">Подтвердить изменения</string>
    <string name="login">Логин пользвателя</string>
    <string name="data_not_correct">Данные введены некорректно</string>
    <string name="logout">logout</string>
    <string name="users">Люди</string>
    <string name="channels">Каналы</string>
    <string name="chats">Чаты</string>
    <string name="message">Сообщение</string>
    <string name="nick_is_set_alreday">Введенный логин уже занят</string>
    <string name="saved">Сохранено</string>
    <string name="friends">Друзья</string>
    <string name="favorites">Избранное</string>
    <string name="black_list">Черный список</string>
    <string name="change_account">Сменить аккаунт</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="recent_search">Недавние запросы</string>
    <string name="search">Поиск</string>
    <string name="cancel_record">Отменить</string>
    <string name="camera">Камера</string>
    <string name="file">Файл</string>
    <string name="gallery">Галерея</string>
    <string name="dialog_is_empty">В диалоге пока нет сообщений</string>
    <string name="image_loading">Изображение отправляется</string>
    <string name="file_loading">Файл отправляется</string>
    <string name="voice_loading">Голосовое сообщение отправляется</string>
    <string name="cancel">Отмена</string>
    <string name="url_copy">Url скопирован</string>
    <string name="text_copy">Текст скопирован</string>
    <string name="your">Вы:</string>
    <string name="one_minute">1м</string>
    <string name="minute">м</string>
    <string name="day">д</string>
    <string name="hour">ч</string>
    <string name="on_off_hide_mode">Вкл/выкл режим невидимки</string>
    <string name="hide_mode_is_on">Режим невидимки включен</string>
    <string name="hide_mode_is_off">Режим невидимки выключен</string>
    <string name="call">звонок</string>
    <string name="video_call">видео</string>
    <string name="search_profile">поиск</string>
    <string name="phone_profile">Номер телефона</string>
    <string name="about_profile">О себе</string>
    <string name="add_in_friend">Добавить в друзья</string>
    <string name="add_in_favorites">Добавить в избранное</string>
    <string name="add_blocklist">Добавить в черный список</string>
    <string name="report">Пожаловаться</string>
    <string name="more_profile">еще</string>
    <string name="remove_from_friends">Убрать из друзей</string>
    <string name="my_friends">Мои друзья</string>
    <string name="saved_images">Сохраненное</string>
    <string name="save_pic">Сохранить изображение</string>
    <string name="copy_path">Копировать ссылку</string>
    <string name="load_pic">Скачать мзображение</string>
    <string name="add_tittle_in_saved">Изображение добавлено в Сохраненное</string>
    <string name="tittle_null">Причина не описана</string>
    <string name="cause_block">Напишите причину (необязательно)</string>
    <string name="block">Заблокировать</string>
    <string name="blocked_tittle">Пользователь ограничил Вам доступ</string>
    <string name="info_is_not_enabled">Информация недоступна</string>
    <string name="remove_from_black_list">Убрать из черного списка</string>
    <string name="no_friends">Пока что у Вас нет друзей :(</string>
    <string name="no_chats">Пока что у Вас нет чатов :(</string>
    <string name="no_channels">Пока что у Вас нет каналов :(</string>
    <string name="no_photo">Пока что Вы не сохранили ни одно фото</string>
    <string name="no_block">Пока что Ваш черный список пуст</string>
    <string name="add_in_friend_notification">добавил(-a) Вас в друзья</string>
    <string name="gs">Голосовое сообщение</string>
    <string name="pic_notification">Изображение</string>
    <string name="file_notification">Файл</string>
    <string name="choose_color">Выберите цвет кисти</string>
    <string name="choose_color_background">Выберите цвет фона</string>
    <string name="cancel_color">Отмена</string>
    <string name="ok_color">Ok</string>
    <string name="graffiti_label">Граффити</string>
    <string name="send_menu_label">Отправить</string>
    <string name="save_menu_label">Сохранить</string>
    <string name="save_in_gallery">Сохранить изображение в Галерею</string>
    <string name="clear_canvas">Очистить полотно</string>
    <string name="error_save_graffiti">Error save graffiti</string>
    <string name="graffiti_success_load">Граффити успешно загрузилось</string>
    <string name="canvas_is_clear_error">Полотно пустое</string>
    <string name="channel_name_hint">Введите название канала</string>
    <string name="description_channel_hint">Введите описание канала</string>
    <string name="open_channel">Открытый канал</string>
    <string name="close_channel">Закрытый канал</string>
    <string name="hide_channel">Скрытый канал</string>
    <string name="choice_type_channel_description">Выберите один из трех вариантов выше.\nОткрытый канал будет виден всем и каждый участник может вступить и читать новости канала.\nЗакрытый канал будет виден всем пользователям, однако контент можно будет просматривать только после одобрения администратором канала заявки на вступление.\nСкрытый канал не будет виден никому. Присоединиться к каналу и просматривать его контент можно будет, если администратор отправит пользователю приглашение.</string>
    <string name="creating_channel">Создание канала</string>
    <string name="create_channel">Создать канал</string>
    <string name="enter_correct_channel_name">Введите корректное название канала</string>
    <string name="create_news">Создать новость</string>
    <string name="settings_channel">Параметры</string>
    <string name="enter_news">Введите новость</string>
    <string name="add_file_in_news">Приложить файл</string>
    <string name="public_news">Опубликовать</string>
    <string name="file_was_added">Файл прикрепляется</string>
    <string name="enter_text">Введите текст</string>
    <string name="my_channels">Созданные каналы</string>
    <string name="my_channels_tittle">Мои каналы</string>
    <string name="settings">Настройки</string>
    <string name="subscribers">Подписчики</string>
    <string name="delete_channel">Удалить канал</string>
    <string name="page_channel">Страница канала</string>
    <string name="internet_is_unavailable">Отсутствует подключение</string>
    <string name="internet_available">Соединение восстановлено</string>
    <string name="subs">Подписчиков</string>
    <string name="subscribe_channel">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="subs_label">Подписчики</string>
    <string name="no_conn_label">Нет соединения с интернетом</string>
    <string name="connection_proccess">Соединение</string>
    <string name="change_layout">Сменить просмотр</string>
    <string name="my_channels_my_chats">Мои группы</string>
    <string name="notifications_feed">Уведомления</string>
    <string name="add_friend_notification">добавил(-а) Вас в друзья</string>
    <string name="accept_friend">Принять</string>
    <string name="disable_friend">Отклонить</string>
    <string name="open_or_close_account">Открыть/закрыть аккаунт</string>
    <string name="private_account">Аккаунт закрыт</string>
    <string name="open_account">Аккаунт открыт</string>
    <string name="add_in_friend_private_account">Пользователю отправлено уведомление о Вашей заявке в друзья</string>
    <string name="ago">назад</string>
</resources>