<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyBackground"
    android:id="@+id/mainConst"
    tools:context=".presentation.fragments.changeUserData.ChangeUserDataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressbar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/header_content_style"
        android:translationZ="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/normal_margin"
            android:indeterminateTint="@color/progressBarColor"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/box_content_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/full_name_label_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:text="@string/name_change"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/full_name_text_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:background="@color/editTextColor"
            android:maxLength="31"
            android:maxLines="2"
            android:hint="@string/enter_name"
            android:textColor="@color/textColor"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginTop="@dimen/min_margin"
            app:layout_constraintStart_toStartOf="@id/full_name_label_change"
            app:layout_constraintTop_toBottomOf="@id/full_name_label_change"/>

        <TextView
            android:id="@+id/name_label_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/login"
            android:layout_marginStart="@dimen/normal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/full_name_text_change" />
        <EditText
            android:id="@+id/name_text_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/editTextColor"
            android:hint="@string/enter_login"
            android:maxLines="2"
            android:maxLength="31"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="@id/name_label_change"
            app:layout_constraintTop_toBottomOf="@id/name_label_change" />

        <TextView
            android:id="@+id/bio_label_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/bio_change"
            app:layout_constraintStart_toStartOf="@id/name_label_change"
            app:layout_constraintTop_toBottomOf="@id/name_text_change" />

        <EditText
            android:id="@+id/bio_text_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@color/editTextColor"
            android:hint="@string/bio_change_user"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/bio_label_change"
            app:layout_constraintTop_toBottomOf="@id/bio_label_change" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>