<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/content_style_top_corners">

    <ImageView
        android:id="@+id/line"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_line_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/saved_account_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/ic_size_bottom_sheet"
            android:layout_height="@dimen/ic_size_bottom_sheet"
            android:src="@drawable/ic_bookmark"
            android:layout_margin="@dimen/min_margin"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved"
            style="@style/normal_text"
            android:layout_margin="0dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/friends_account_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saved_account_bottom_sheet"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/ic_size_bottom_sheet"
            android:layout_height="@dimen/ic_size_bottom_sheet"
            android:src="@drawable/ic_group"
            android:layout_margin="@dimen/min_margin"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            style="@style/normal_text"
            android:layout_margin="0dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favorites_account_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/friends_account_bottom_sheet"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/ic_size_bottom_sheet"
            android:layout_height="@dimen/ic_size_bottom_sheet"
            android:src="@drawable/ic_favorite"
            android:layout_margin="@dimen/min_margin"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            style="@style/normal_text"
            android:layout_margin="0dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/black_list_account_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorites_account_bottom_sheet"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/ic_size_bottom_sheet"
            android:layout_height="@dimen/ic_size_bottom_sheet"
            android:src="@drawable/ic_ban"
            android:layout_margin="@dimen/min_margin"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_list"
            style="@style/normal_text"
            android:layout_margin="0dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_acc_account_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/black_list_account_bottom_sheet"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/ic_size_bottom_sheet"
            android:layout_height="@dimen/ic_size_bottom_sheet"
            android:src="@drawable/ic_change_account"
            android:layout_margin="@dimen/min_margin"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_account"
            style="@style/normal_text"
            android:layout_margin="0dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/exit_account_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/normal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_acc_account_bottom_sheet"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/ic_size_bottom_sheet"
            android:layout_height="@dimen/ic_size_bottom_sheet"
            android:src="@drawable/ic_log_out"
            android:layout_margin="@dimen/min_margin"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            style="@style/normal_text"
            android:textColor="@color/colorRed"
            android:layout_margin="0dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>